# rust-factorio-ic

./: .gitmodules  Cargo.toml  rustfmt.toml
.github/workflows/: rust.yml
src/: consts.rs  kirkmcdonald.rs  lib.rs  main.rs  pcb.rs  recipe.rs  render.rs
src/pcb/: grid.rs  hashmap.rs  mod.rs  naive.rs
src/placement/: bus.rs  mod.rs  simple_grid.rs
src/routing/: leemaze_lib.rs  mod.rs  mylee.rs
