[package]
name = "factorio-ic"
version = "0.1.0"
authors = ["main() <main@ehvag.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
factorio-blueprint = "0.1.1"
rlua = "0.17"
leemaze = "0.1.11"
nalgebra = "0.21"

[patch.crates-io]
factorio-blueprint = { git = "https://github.com/main--/factorio-blueprint.git?branch=master" }
