[package]
name = "factorio-ic"
version = "0.1.0"
authors = ["main() <main@ehvag.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
factorio-blueprint = { git = "https://github.com/coriolinus/factorio-blueprint", rev = "0809254a78b1165a2d7e014db9e377bfe55b8ecc" }
rlua = "0.17"
leemaze = "0.1.11"
nalgebra = "0.21"
fehler = "1.0"
ndarray = "0.13"
rand = "0.7"
bitflags = "1.2.1"
either = "1.5.3"
fnv = "1.0"

[features]
render_wiring_steps = []

[profile.release]
debug = true
